--- a/travelAgency/styles/aboutUsStyle.css
+++ b/travelAgency/styles/aboutUsStyle.css
@@ -34,6 +34,12 @@ header nav{
     text-align: center;
     padding-top:30px;
     padding-bottom:30px;
+    display: flex;
+    justify-content: center;
+}
+header .header{
+    position: relative;
+    bottom:20px;
 }
 header nav a{
     text-decoration: none;
@@ -44,7 +50,8 @@ header nav a{
 }
 .icons{
     position: relative;
-    left:170px;
+    left:180px;
+    bottom:-40px;
 }
 .icons i{
     margin-right:-70px;
@@ -55,7 +62,7 @@ header nav a{
     top:50%;
     left:-50px;
     color:white;
-    background-color: rgb(95, 55, 60);
+    background-color: #5f373c;
     padding:12px;
     font-size: 13px;
     letter-spacing: 2px;
@@ -263,3 +270,19 @@ footer{
 .bottomList a li{
     font-size: 14px;
 }
+.signin{
+    position: relative;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    left:220px;
+   
+}
+.signin p{
+    position: relative;
+    right:70px;
+    bottom:6px;
+    font-size:15px;
+}
+
+  
